--- a/templates/User/userProfile.html
+++ b/templates/User/userProfile.html
@@ -187,7 +187,7 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
-				<a href="index.html"><img src="{% static 'images/icons/pre-black.png'%}" alt="IMG-LOGO"></a>
+				<a href="{% url 'home' %}"><img src="{% static 'images/icons/pre-black.png'%}" alt="IMG-LOGO"></a>
 			</div>
 
 			<!-- Button show menu -->
