--- a/templates/User/userProfile2.html
+++ b/templates/User/userProfile2.html
@@ -30,7 +30,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css'%}">
 <!--===============================================================================================-->
 <style>
-	 .test a {
+        .test a {
             font-family: Poppins-Medium;
             font-size: 20px;
 			font-weight: bold;
@@ -41,18 +41,17 @@
             -o-transition: all 0.4s;
             -moz-transition: all 0.4s;
         }
-		.animsition p{
-			font-size: 20px;
-		}
         
         .profileimage img{
             height: 160px;
             width: 160px;
             border-radius: 50%;
-			/* border-color: #fff;  */
+			border-color: #fff;
         }
         .profileimage{
-			/* margin-left: 30px; */
+           /* display: inline-block; 
+            margin: 0 0px;*/
+            text-align: center;
             margin-top: -50px;
         }
         .info-box {
@@ -64,10 +63,10 @@
 			font-size: 18px;
 		}
 		.biodata p {
-			font-size:20px;
+			font-size:17px;
 		}
 		.pro-info{
-			font-size:20px;
+			font-size:17px;
 		}
 		.contact-btn .btn-text-size{
 			font-size: 18px;
@@ -83,7 +82,69 @@
 			border-color:#af0010;
 		}
 		
-		
+		/*button design */
+		.glow-on-hover {
+		width: 130px;
+		height: 45px;
+		border: none;
+		outline: none;
+		color: #fff;
+		background: #111;
+		cursor: pointer;
+		position: relative;
+		z-index: 0;
+		border-radius: 10px;
+		padding-top:10px;
+		font-size: 20px;
+	}
+
+	.glow-on-hover:before {
+		content: '';
+		background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+		position: absolute;
+		top: -2px;
+		left:-2px;
+		background-size: 400%;
+		z-index: -1;
+		filter: blur(5px);
+		width: calc(100% + 4px);
+		height: calc(100% + 4px);
+		animation: glowing 20s linear infinite;
+		opacity: 0;
+		transition: opacity .3s ease-in-out;
+		border-radius: 10px;
+	}
+
+	.glow-on-hover:active {
+		color: #000
+	}
+
+	.glow-on-hover:active:after {
+		background: transparent;
+	}
+
+	.glow-on-hover:hover:before {
+		opacity: 1;
+	}
+
+	.glow-on-hover:after {
+		z-index: -1;
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		background: #500000;
+		border:2px solid white;
+		left: 0;
+		top: 0;
+		border-radius: 10px;
+	}
+
+	@keyframes glowing {
+		0% { background-position: 0 0; }
+		50% { background-position: 400% 0; }
+		100% { background-position: 0 0; }
+	}
 
 	/* tabs design */
 	.infoanchor a{
@@ -91,75 +152,6 @@
 			font-weight: bold;
 			font-size: larger;
 		}
-
-		a.mybtn {
-			font-weight: bold;
-			font-size: 18px;
-			padding: 11px;
-			background: black;
-			color: white;
-			border-radius: 25px;
-			border: 2px solid white;
-			padding-left: 22px;
-			padding-right: 22px;
-		}
-		a.mybtn:hover {
-			font-weight: bold;
-			font-size: 18px;
-			padding: 11px;
-			background: rgb(255, 253, 253);
-			color: rgb(0, 0, 0);
-			border-radius: 25px;
-			padding-left: 22px;
-			padding-right: 22px;
-		}
-		a.callbtn {
-			background: black;
-			padding: 5px 10px 5px 10px;
-			border: 2px solid white;
-			font-size: 20px;
-			color: white;
-			border-radius: 8px;
-			/* margin-left: 20px; */
-			text-align: left;
-		}
-		a.mailbtn {
-			background: black;
-			padding: 5px 10px 5px 10px;
-			border: 2px solid white;
-			font-size: 20px;
-			color: white;
-			border-radius: 8px;
-			/* margin-left: 20px; */
-			text-align: left;
-		}
-		.contactbtn .bg-black {
-			background: black;
-			border-radius: 10px;
-		}
-		.contactbtn .bg-black :hover {
-			background: white;
-			color: black;
-			border-radius: 10px;
-		}
-		.contactbtn a{
-			color:white;
-			font-size: 18px;
-		}
-		.contactbtn i{
-			font-size: 20px;
-		}
-		.skills p{
-			font-size: 18px;
-			color:#9e9e9e;
-		}
-		.dot {
-			height: 10px;
-			width: 10px;
-			background-color: #9e9e9e;
-			border-radius: 50%;
-			display: inline-block;
-			}
 </style>
 </head>
 <body class="animsition">
@@ -206,78 +198,41 @@
 			</div>
 		</div>
 	</header>
-	<section class="pb-5" style="background-color: black; color: whitesmoke;">
+
+    <section class="pb-5" style="background-image: linear-gradient(to bottom right, #ea1c1c, Black); color: white;">
         
-		<!-- COVER PHOTO -->
-        <div class="coverimage">
-            <img src="{% static 'images/slide-01.jpg'%}" class="img-fluid responsive" alt="CoverImg"> 
-        </div>
+            <div class="coverimage">
+                <img src="{% static 'images/slide-01.jpg'%}" class="img-fluid responsive" alt="CoverImg"> 
+            </div>
+			<div class="row">
+				<div class="container profileimage ">
+					<img src="{% static 'images/avatar-01.jpg'%}" class="img-fluid img-thumbnail" alt="Profileimg"> 
+				</div>
+			</div>
+      
+		<div class="container mt-3 text-center biodata">
+			<h5 style="font-size:25px;">Md Sayem Uddin</h5>
+		
+			<p class="mt-2 font-weight-bold">Sr. Software Engineer</p>
 
-		<!-- PROFILE PICTURE  -->
-		<div class="bg-dark">
-			<div class="container profileimage">
-				<img src="{% static 'images/avatar-01.jpg'%}" class="img-fluid img-thumbnail" alt="Profileimg"> 
-			</div>
-		</div>
-		<!-- About INFORMATION  -->
-		<div>
-			<!-- NAME AND DESIGNATION INFO  -->
-			<div class="p-3 bg-dark">
-				<h5 style="font-size:25px; font-weight: bold;">Md Sayem Uddin</h5>
-				<p>Full-stack web Developer ( React JS, Python, Djanog)</p>
-				<div class="d-flex  mt-3">
-					<div class="p-2">
-						<a href="#" class="mybtn">Save Contact</a>
-					</div>
-					<div class="p-2">
-						<a href="#" class="mybtn" >Connect</a>
-					</div>
-				</div>
-			</div>
-			<!-- ABOUT  -->
-			<div class="p-3 bg-dark mt-2">
-				<h4 class="mt-4 font-weight-bold">About</h4>
-				<p class="mt-3">Hello my name is sayem uddin and i am a web developer currently working in a software company called techmelba international.</p>
-				<div class="d-flex  mt-3">
-					<div class="p-2">
-						<a href="#" class="mybtn"><i class="fa fa-phone"></i> Call Now</a>
-					</div>
-					<div class="p-2">
-						<a href="#" class="mybtn" ><i class="fa fa-envelope"></i> 
-							Email</a>
-					</div>
-				</div>
-			</div>
-			<!-- CONTACT  -->
-			<div class="p-3 bg-dark mt-2">
-				<h4 class="mt-4 font-weight-bold">Contact</h4>
-				<div class="contactbtn mt-3">
-					<div class="bg-black">
-						<div class="d-flex">
-							<div class="p-3"><i class="fa fa-phone mt-1"></i></div>
-							<div class="p-3"><a href="#">+880 1316522214</a></div>
-						</div>
-					</div>
-					<div class=" bg-black mt-2">
-						<div class="d-flex">
-							<div class="p-3"><i class="fa fa-envelope mt-1"></i></div>
-							<div class="p-3"><a href="#">sayemuddin471@gmail.com</a></div>
-						</div>
-					</div>
-
-					<div class=" bg-black mt-2">
-						<div class="d-flex">
-							<div class="p-3"><i class="fa fa-map-marker mt-1"></i></div>
-							<div class="p-3"><a href="#">Fauzdarhat, Sitakunda, Chittagong</a></div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- SOCIAL LINKS  -->
-		<div class="container mt-2 biodata bg-dark p-3">
 			<div class="container contact-btn">
-				<div class="container social-links mt-2 sec-relate-product">
+				<div class="d-flex justify-content-center mt-3">
+					<div class="p-2"><a href="#" class="btn btn-outline-light glow-on-hover btn-text-size">Save Contact</a></div>
+					<div class="p-2"><a href="#" class="btn btn-danger glow-on-hover btn-text-size" >Connect</a></div>
+				</div>
+			</div>
+
+			<div class="container p-2 contact-btn">
+				<p class="mt-3">Hello my name is sayem uddin and i am a web developer currently working in a software company called techmelba international.
+				<div class="d-flex justify-content-center mt-3">
+						<div class="p-2">
+							<a href="#" class="btn btn-outline-light glow-on-hover"><i class="fa fa-phone"></i> Call Now</a></div>
+					<div class="p-2"><a href="#" class="btn btn-outline-light glow-on-hover"> 
+						<i class="fa fa-envelope"></i> 
+						Email</a></div>
+				</div>
+
+				<div class="container social-links mt-4 sec-relate-product">
 					<div class="p-t-5 p-b-5">
 						<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
 							<i class="fa fa-facebook"></i>
@@ -299,76 +254,58 @@
 						<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
 							<i class="fa fa-twitter"></i>
 						</a>
-						<!-- <a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
+						<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
 							<i class="fa fa-globe"></i>
-						</a> -->
+						</a>
 					</div>
 					
 				</div>
 			</div>
 		</div>
 
-		<!-- PERSONAL & PROFESSIONAL INFORMATION  -->
-		<div class="container p-4 bg-dark mt-2">
+		<div class="container p-4 ">
 			<ul class="nav nav-tabs infoanchor" id="myTab" role="tablist">
 				<li class="nav-item">
-				  <a class="nav-link active tabdesign" id="professional-tab" data-toggle="tab" href="#professional" role="tab" aria-controls="professional" aria-selected="true">Professional</a>
+				  <a class="nav-link active tabdesign" id="personal-tab" data-toggle="tab" href="#personal" role="tab" aria-controls="personal" aria-selected="true">Personal</a>
 				</li>
 				<li class="nav-item">
-				  <a class="nav-link tabdesign" id="skills-tab" data-toggle="tab" href="#skills" role="tab" aria-controls="skills" aria-selected="false">Skills</a>
+				  <a class="nav-link tabdesign" id="professional-tab" data-toggle="tab" href="#professional" role="tab" aria-controls="professional" aria-selected="false">Prof.</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link tabdesign" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
 				</li>
 			  </ul>
 			  <div class="tab-content p-4" id="myTabContent">
-				
-				<!-- PROFESSIONAL INFORMATION  -->
-				<div class="tab-pane fade show active" id="professional" role="tabpanel" aria-labelledby="professional-tab">
-					<div class="mt-2 mb-2">
-						<h5 class="font-weight-bold">Full-stack Developer</h5>
-						<h6>Techmelba International</h6>
-						<p style="font-size: 15px; color:#9e9e9e"> 
-							<span>May 2020 - Continuing . </span> 
-							<span> House 417, Road 07, Baridhara DOHS, Dhaka</span>
-						</p>
-					</div>
-
-					<div class="mt-2 mb-2">
-						<h5 class="font-weight-bold">Frontend Developer</h5>
-						<h6>Gothi Technologies</h6>
-						<p style="font-size: 15px; color:#9e9e9e"> 
-							<span>Feb 2019 - Apr 2020 . </span> 
-							<span> Muhammadpur, Dhaka</span>
-						</p>
-					</div>
+				<div class="tab-pane fade show active " id="personal" role="tabpanel" aria-labelledby="personal-tab">
+					
+					<label> <strong class="profile-info">Name:</strong> <br> <span class="pro-info">Md Sayem Uddin</span> </label>
+					<label> <strong class="profile-info">Birth:</strong> <br><span class="pro-info">  18 July 1996</span></label>
+					<label> <strong class="profile-info">Contact:</strong><br> <span class="pro-info">  +880 1316522214 </span></label>
+					<label> <strong class="profile-info">Email:</strong><br> <span class="pro-info">  sayemuddin471@gmail.com</span></label>
+					<label> <strong class="profile-info">Gender:</strong> <br><span class="pro-info">  Male</span></label>
+					<label> <strong class="profile-info">Address:</strong> <br><span class="pro-info">  Fauzdarhat, Sitakunda, Chittagong</span></label>
 				</div>
+				<div class="tab-pane fade" id="professional" role="tabpanel" aria-labelledby="professional-tab">
+					
+						<label> <strong class="profile-info">Company Name:</strong><br> <span class="pro-info"> TechMelba International</span></label>
+						<label> <strong class="profile-info">Designation:</strong> <br><span class="pro-info"> Sr. Software Engineer</span></label>
+						<label> <strong class="profile-info">Duration:</strong> <br><span class="pro-info"> From 20 March 2023</span></label>
+						<label> <strong class="profile-info">Email:</strong> <br><span class="pro-info"> sayemuddin471@techmelba.com</span></label>
+						<label> <strong class="profile-info">Location:</strong> <br><span class="pro-info"> Baridhara DOHS, Dhaka</span></label>
+				</div>
+				<div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+					
+					<label> <strong class="profile-info">Contact:</strong> <br><span class="pro-info"> +880 1316522214</span> </label>
+					<label> <strong class="profile-info">Email:</strong> <br><span class="pro-info"> sayemuddin471@gmail.com</span> </label>
 
-				<!-- SKILLS INFORMATION  -->
-				<div class="tab-pane fade" id="skills" role="tabpanel" aria-labelledby="skills-tab">
-					<div class="skills">
-						<p class="mb-1"> 
-							<span class="dot"></span> 
-							Problem Solving
-						</p>
-						<p class="mb-1"> 
-							<span class="dot"></span> 
-							Web Designing
-						</p>
-						<p class="mb-1"> 
-							<span class="dot"></span>  
-							Software Development
-						</p>
-						<p class="mb-1"> 
-							<span class="dot"></span>  
-							Graphics Design
-						</p>
-					</div>
 				</div>
 			  </div>
 		</div>
 
-		<!-- <div class="container user-video mt-4">
+		<div class="container user-video mt-4">
 			<iframe width="100%" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
 			</iframe>
-		</div> -->
+		</div>
 
 		<div class="container mt-4 text-center">
 			<h5 class="font-weight-bold text-uppercase"> </h5>
@@ -380,6 +317,8 @@
 		</div>
 	
     </section>
+	
+
 
 	<!-- Footer -->
 	<footer class="p-t-50 p-b-10 text-center" style="background-color: black;">
