minor change in button

--- a/templates/Pages/confirmcard.html
+++ b/templates/Pages/confirmcard.html
@@ -46,7 +46,7 @@
                     <h5><strong>Custome Name:</strong> Md Sayem Uddin</h5>
                     <h5><strong>Order Id:</strong> 0001</h5>
                     <h5><strong>Card Serial Number:</strong> SL09F932Y </h5>
-                    <button class="activeCardbtn mt-3">Card On Board</button>
+                    <button class="activeCardbtn mt-3"Confirm Card</button>
                 </div>
                 <div class="col-sm-3"></div>
             </div>
