--- a/templates/User/editProfile2.html
+++ b/templates/User/editProfile2.html
@@ -199,182 +199,143 @@
 		</div>
 	</header>
 
-    <section class="pb-5 editForm" style="background: black; color: white;">
-		<div class="coverimage">
-			<img src="/images/slide-01.jpg" class="img-fluid responsive" alt="CoverImg">
-		</div>
-			<div class="container profileimage ">
-				<img src="/images/avatar-01.jpg" class="img-fluid img-thumbnail" alt="Profileimg"> 
-			</div>
-	<form>
-		<div class="container mt-3 biodata p-4">
-			<div class="form-group">
-				<label for="coverphoto">Cover Photo:</label>
-				<input type="file" accept="image/*" class="form-control-file" id="coverphoto">
-			</div>
+    <section class="pb-5" style="background-image: linear-gradient(to bottom right, #ea1c1c, Black); color: white;">
+        
+        <div class="coverimage">
+            <img src="{% static 'images/slide-01.jpg'%}" class="img-fluid responsive" alt="CoverImg">
+        </div>
+        <div class="row">
+            <div class="container profileimage ">
+                <img src="{% static 'images/avatar-01.jpg'%}" class="img-fluid img-thumbnail" alt="Profileimg"> 
+            </div>
+        </div>
+    <form>
+        <div class="container mt-3 biodata p-4">
+            <div class="form-group">
+                <label for="coverphoto">Choose Cover Photo</label>
+                <input type="file" accept="image/*" class="form-control-file" id="coverphoto">
+            </div>
 
-			<div class="form-group">
-				<label for="pfofilephoto">Profile Photo:</label>
-				<input type="file" accept="image/*" class="form-control-file" id="pfofilephoto">
-			</div>
+            <div class="form-group">
+                <label for="pfofilephoto">Choose Profile Photo</label>
+                <input type="file" accept="image/*" class="form-control-file" id="pfofilephoto">
+            </div>
 
-			<h5 class="m-t-40 mb-4">Personal</h5>
+            <div class="form-group">
+                <input type="text" class="form-control" id="username" placeholder="Md Sayem Uddin">
+            </div>
 
-			<div class="form-group">
-				<label for="name">Username</label>
-				<input type="text" id="username" value="Md Sayem Uddin">
-			</div>
+            <div class="form-group">
+                <input type="text" class="form-control" id="designation" placeholder="Sr. Software Engineer">
+            </div>
 
-			<div class="form-group">
-				<label for="designation">Designation</label>
-				<input type="text" id="designation" value="Sr. Software Engineer">
-			</div>
+            <div class="form-group">
+                <input type="number" class="form-control" id="phonenumber" placeholder="+880 1316522214">
+            </div>
 
-			<div class="form-group">
-				<label for="mobileno">Mobile</label>
-				<input type="number" id="phonenumber" name="num" value="01316522214">
-			</div>
+            <div class="form-group">
+                <input type="email" class="form-control" id="email" placeholder="sayemuddin471@gmail.com">
+            </div>
 
-			<div class="form-group">
-				<label for="email">Email</label>
-				<input type="email" id="email" value="sayemuddin471@gmail.com">
-			</div>
+            <div class="form-group">
+                <textarea type="text" rows="3" class="form-control" id="userbio" placeholder="Hello my name is sayem uddin and i am a web developer currently working in a software company called techmelba international."></textarea>
+            </div>
+        
 
-			<div class="form-group">
-				<label for="bio">Biography</label>
-				<textarea type="text" rows="3" id="userbio">Hello my name is sayem uddin and i am a web developer currently working in a software company called techmelba international.</textarea>
-			</div>
+            
 
-			<div class="form-group">
-				<label for="address">Address</label>
-				<textarea type="text" rows="3" id="userbio">North Salimpur, Fauzdarhat, Sitakunda, Chattogram</textarea>
-			</div>
+            <div class="container p-2 contact-btn">
+                
+                <div class="container social-links mt-4 sec-relate-product">
+                    <div class="p-t-5 p-b-5">
+                        <a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
+                            <i class="fa fa-facebook"></i>
+                        </a>
 
+                        <a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
+                            <i class="fa fa-instagram"></i>
+                        </a>
 
-			<!-- Social Links  -->
-			<div class="mt-4">
-				<h5 class="m-t-40 mb-4">Social Links</h5>
-				<div class="inlineFiled">
-					<div class="d-flex justify-content-start">
-						<div class="p-2">
-							<label for="socialLinks">Social</label>
-							<select id="sname" name="sname">
-								<option value="facebook">facebook</option>
-								<option value="twitter">Twitter</option>
-								<option value="snapChat">SnapChat</option>
-								<option value="youtube">Youtube</option>
-							</select>
-						</div>
-						<div class="p-2 text-right">
-							<label for="name">Links</label>
-							<input type="text" value="https://www.facebook.com/sayem.sam">
-							<a href="#" type="button" class="text-light mr-2"><i class="fa fa-eye" style="font-size:20px;"></i></a>
-							<a href="#" type="button" class="text-light ml-2"> <i class="fa fa-trash-o" style="font-size:20px;"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="inlineFiled">
-					<div class="d-flex justify-content-start">
-						<div class="p-2">
-							<label for="socialLinks">Social</label>
-							<select id="sname" name="sname">
-								<option value="facebook">facebook</option>
-								<option value="twitter">Twitter</option>
-								<option value="snapChat">SnapChat</option>
-								<option value="youtube">Youtube</option>
-							</select>
-						</div>
-						<div class="p-2 text-right">
-							<label for="name">Links</label>
-							<input type="text" value="https://www.facebook.com/sayem.sam">
-							<a href="#" type="button" class="text-light mr-2"><i class="fa fa-eye" style="font-size:20px;"></i></a>
-							<a href="#" type="button" class="text-light font-weight-bold ml-2"> <i class="fa fa-trash-o" style="font-size:20px;"></i></a>
-						</div>
-					</div>
+                        <a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
+                            <i class="fa fa-pinterest-p"></i>
+                        </a>
+                        <a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
+                            <i class="fa fa-youtube"></i>
+                        </a>
+                        <a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
+                            <i class="fa fa-google"></i>
+                        </a>
+                        <a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                        <a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
+                            <i class="fa fa-globe"></i>
+                        </a>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
 
-					<div class="container mt-4 text-right">
-						<button class="linksBtn">Add Links</button>
-					</div>
-					
-				</div>
-			</div> 
-			
-			<div class="mt-4">
-				<ul class="nav nav-tabs infoanchor" id="myTab" role="tablist">
-					<li class="nav-item">
-					  <a class="nav-link active tabdesign" id="professional-tab" data-toggle="tab" href="#professional" role="tab" aria-controls="professional" aria-selected="true">Professional</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link tabdesign" id="skills-tab" data-toggle="tab" href="#skills" role="tab" aria-controls="skills" aria-selected="false">Skills</a>
-					</li>
-				  </ul>
-				  <div class="tab-content p-4" id="myTabContent">
-					<!-- PROFESSIONAL INFORMATION  -->
-					<div class="tab-pane fade show active" id="professional" role="tabpanel" aria-labelledby="professional-tab">
-						<div class="proinline">
-							<div class="mt-2 mb-2" id="proInline">
-								<label for="cmpDesignation">Responsibilty</label>
-								<input type="text" value="Full-stack Developer">
+        <div class="container p-4 ">
+            <ul class="nav nav-tabs infoanchor" id="myTab" role="tablist">
+                <li class="nav-item">
+                <a class="nav-link active tabdesign" id="personal-tab" data-toggle="tab" href="#personal" role="tab" aria-controls="personal" aria-selected="true">Personal</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link tabdesign" id="professional-tab" data-toggle="tab" href="#professional" role="tab" aria-controls="professional" aria-selected="false">Prof.</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link tabdesign" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
+                </li>
+            </ul>
+            <div class="tab-content p-4" id="myTabContent">
+                <div class="tab-pane fade show active " id="personal" role="tabpanel" aria-labelledby="personal-tab">
+                    
+                    <label> <strong class="profile-info">Name:</strong> <br> <span class="pro-info">Md Sayem Uddin</span> </label>
+                    <label> <strong class="profile-info">Birth:</strong> <br><span class="pro-info">  18 July 1996</span></label>
+                    <label> <strong class="profile-info">Contact:</strong><br> <span class="pro-info">  +880 1316522214 </span></label>
+                    <label> <strong class="profile-info">Email:</strong><br> <span class="pro-info">  sayemuddin471@gmail.com</span></label>
+                    <label> <strong class="profile-info">Gender:</strong> <br><span class="pro-info">  Male</span></label>
+                    <label> <strong class="profile-info">Address:</strong> <br><span class="pro-info">  Fauzdarhat, Sitakunda, Chittagong</span></label>
+                </div>
+                <div class="tab-pane fade" id="professional" role="tabpanel" aria-labelledby="professional-tab">
+                    
+                        <label> <strong class="profile-info">Company Name:</strong><br> <span class="pro-info"> TechMelba International</span></label>
+                        <label> <strong class="profile-info">Designation:</strong> <br><span class="pro-info"> Sr. Software Engineer</span></label>
+                        <label> <strong class="profile-info">Duration:</strong> <br><span class="pro-info"> From 20 March 2023</span></label>
+                        <label> <strong class="profile-info">Email:</strong> <br><span class="pro-info"> sayemuddin471@techmelba.com</span></label>
+                        <label> <strong class="profile-info">Location:</strong> <br><span class="pro-info"> Baridhara DOHS, Dhaka</span></label>
+                </div>
+                <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+                    
+                    <label> <strong class="profile-info">Contact:</strong> <br><span class="pro-info"> +880 1316522214</span> </label>
+                    <label> <strong class="profile-info">Email:</strong> <br><span class="pro-info"> sayemuddin471@gmail.com</span> </label>
 
-								<label for="cmpName">Company</label>
-								<input type="text" value="Techmelba International">
-								
-								<div>
-									<div class="d-flex justify-content-start">
-										<div class="p-1">
-											<label for="date">From</label>
-											<input type="date">
-										</div>
-										<div class="p-1">
-											<label for="date">To</label>
-											<input type="date">
-										</div>
-									</div>
-								</div>
-								<label for="location">Location</label>
-								<textarea type="text" name="location"  cols="30" rows="3">House 417, Road 07, Baridhara DOHS, Dhaka</textarea>
-							</div>
-						</div>
-						<div class="container text-right">
-							<button class="linksBtn mt-4 ">Add More</button>
-						</div>
-					</div>
-	
-					<!-- SKILLS INFORMATION  -->
-					<div class="tab-pane fade" id="skills" role="tabpanel" aria-labelledby="skills-tab">
-						<div class="skills">
-							<label for="skName">Skills</label>
-							<input type="text" value="Web Development">
-						</div>
-						<div class="container text-right">
-							<button class="linksBtn mt-4">Add Skills</button>
-						</div>
-					</div>
-				  </div>
-			</div>
-		</div>
+                </div>
+            </div>
+        </div>
 
-	
-		<div class="container user-video mt-4">
-			<div class="form-group">
-				<label for="pfofilephoto">Upload Video</label>
-				<input type="file" accept="video/*" class="form-control-file" id="uservideo">
-			</div>
-		</div>
+        <div class="container user-video mt-4">
+            <div class="form-group">
+                <label for="pfofilephoto">Upload Video</label>
+                <input type="file" accept="video/*" class="form-control-file" id="uservideo">
+            </div>
+        </div>
 
-		<div class="container user-video mt-4">
-			<div class="form-group">
-				<label for="pfofilephoto">Upload Resume or PDF</label>
-				<input type="file" accept="pdf/*" class="form-control-file" id="userfile">
-			</div>
-		</div>
+        <div class="container user-video mt-4">
+            <div class="form-group">
+                <label for="pfofilephoto">Upload Resume or PDF</label>
+                <input type="file" accept="pdf/*" class="form-control-file" id="userfile">
+            </div>
+        </div>
 
-	   
+       
 
-		<div class="container mt-5 text-center">
-			<button class="linksBtn btn-block">Save Profile</button>
-		</div>
-	</form>
+        <div class="container mt-5 text-center">
+            <a href="#" class="btn btn-success">Save Profile</a>
+        </div>
+    </form>
 </section>
 
 	<!-- Footer -->
