--- a/templates/Auth/userlogin.html
+++ b/templates/Auth/userlogin.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html lang="en">
 <head>
-	<title>PREFACE | Edit Profile</title>
+	<title>PREFACE | Login</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -118,7 +118,7 @@
                     </div>
                     <div class="text-center">
                         <h4 class="font-weight-bold">Welcome</h4>
-                        <p>Please Login To Activate Your Card</p>
+                        <p>Login</p>
             
                         <div class="p-4">
                             <form>
