--- a/templates/User/editProfile.html
+++ b/templates/User/editProfile.html
@@ -157,7 +157,7 @@
 		border-bottom: 2px solid white;
 	}
 
-	button.linksBtn {
+	.linksBtn {
 		color: white;
 		background: red;
 		padding: 10px 30px 10px 30px;
@@ -166,7 +166,7 @@
 		font-weight: bold;
 	}
 	
-	button.linksBtn:hover {
+	.linksBtn:hover {
 		color: black;
 		background: white;
 		padding: 10px 30px 10px 30px;
@@ -272,51 +272,34 @@
 			</div>
 
 
-			<!-- Social Links  -->
-			<div class="mt-4">
-				<h5 class="m-t-40 mb-4">Social Links</h5>
-				<div class="inlineFiled">
-					<div class="d-flex justify-content-start">
-						<div class="p-2">
-							<label for="socialLinks">Social</label>
-							<select id="sname" name="sname">
-								<option value="facebook">facebook</option>
-								<option value="twitter">Twitter</option>
-								<option value="snapChat">SnapChat</option>
-								<option value="youtube">Youtube</option>
-							</select>
-						</div>
-						<div class="p-2 text-right">
-							<label for="name">Links</label>
-							<input type="text" value="https://www.facebook.com/sayem.sam">
-							<a href="#" type="button" class="text-light mr-2"><i class="fa fa-eye" style="font-size:20px;"></i></a>
-							<a href="#" type="button" class="text-light ml-2"> <i class="fa fa-trash-o" style="font-size:20px;"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="inlineFiled">
-					<div class="d-flex justify-content-start">
-						<div class="p-2">
-							<label for="socialLinks">Social</label>
-							<select id="sname" name="sname">
-								<option value="facebook">facebook</option>
-								<option value="twitter">Twitter</option>
-								<option value="snapChat">SnapChat</option>
-								<option value="youtube">Youtube</option>
-							</select>
-						</div>
-						<div class="p-2 text-right">
-							<label for="name">Links</label>
-							<input type="text" value="https://www.facebook.com/sayem.sam">
-							<a href="#" type="button" class="text-light mr-2"><i class="fa fa-eye" style="font-size:20px;"></i></a>
-							<a href="#" type="button" class="text-light font-weight-bold ml-2"> <i class="fa fa-trash-o" style="font-size:20px;"></i></a>
+				<!-- Social Links  -->
+				<div class="mt-4">
+					<h5 class="m-t-40 mb-4">Social Links</h5>
+					<div class="socialWrapper">
+						<div class="inlineFiled social_parentDiv">
+							<div class="d-flex justify-content-start ">
+								<div class="p-2">
+									<label for="socialLinks">Social</label>
+									<select id="sname" name="sname">
+										<option value="facebook">facebook</option>
+										<option value="twitter">Twitter</option>
+										<option value="snapChat">SnapChat</option>
+										<option value="youtube">Youtube</option>
+									</select>
+								</div>
+								<div class="p-2 text-right">
+									<label for="name">Links</label>
+									<input type="text" value="https://www.facebook.com/sayem.sam">
+									<!-- <a href="#" type="button" class="text-light mr-2"><i class="fa fa-eye" style="font-size:20px;"></i></a>
+									<a href="#" type="button" class="text-light ml-2"> <i class="fa fa-trash-o" style="font-size:20px;"></i></a> -->
+								</div>
+							</div>
 						</div>
 					</div>
-
+						
 					<div class="container mt-4 text-right">
-						<button class="linksBtn">Add Links</button>
+						<a href="javascript:void(0);" class="linksBtn" id="socialAddMore">Add Links</a>
 					</div>
-					
 				</div>
 			</div> 
 			
@@ -332,8 +315,8 @@
 				  <div class="tab-content p-4" id="myTabContent">
 					<!-- PROFESSIONAL INFORMATION  -->
 					<div class="tab-pane fade show active" id="professional" role="tabpanel" aria-labelledby="professional-tab">
-						<div class="proinline">
-							<div class="mt-2 mb-2" id="proInline">
+						<div class="profwrapper">
+							<div class="mt-2 mb-2 profParentDiv">
 								<label for="cmpDesignation">Responsibilty</label>
 								<input type="text" value="Full-stack Developer">
 
@@ -344,11 +327,11 @@
 									<div class="d-flex justify-content-start">
 										<div class="p-1">
 											<label for="date">From</label>
-											<input type="date">
+											<input type="date" class="form-control">
 										</div>
 										<div class="p-1">
 											<label for="date">To</label>
-											<input type="date">
+											<input type="date" class="form-control">
 										</div>
 									</div>
 								</div>
@@ -356,19 +339,22 @@
 								<textarea type="text" name="location"  cols="30" rows="3">House 417, Road 07, Baridhara DOHS, Dhaka</textarea>
 							</div>
 						</div>
-						<div class="container text-right">
-							<button class="linksBtn mt-4 ">Add More</button>
+						
+						<div class="container text-right mt-4">
+							<a href="javascript:void(0);" class="linksBtn mt-4" id="AddMoreProf">Add More</a>
 						</div>
 					</div>
 	
 					<!-- SKILLS INFORMATION  -->
 					<div class="tab-pane fade" id="skills" role="tabpanel" aria-labelledby="skills-tab">
-						<div class="skills">
-							<label for="skName">Skills</label>
-							<input type="text" value="Web Development">
+						<div class="skillswrapper">
+							<div class="skills">
+								<label for="skName">Skills</label>
+								<input type="text" value="Web Development">
+							</div>
 						</div>
-						<div class="container text-right">
-							<button class="linksBtn mt-4">Add Skills</button>
+						<div class="container text-right mt-4">
+							<a href="javascript:void(0);" class="linksBtn mt-4" id="skillAddMore">Add Skills</a>
 						</div>
 					</div>
 				  </div>
@@ -456,6 +442,77 @@
 	</script>
 <!--===============================================================================================-->
 	<script src="{% static 'js/main.js'%}"></script>
+	<!-- SOCIAL LINKS JQUERY INLINE  -->
+	<script type="text/javascript">
+	$(document).ready(function(){
+		var maxField = 10; //Input fields increment limitation
+		var addSocialButton = $('#socialAddMore'); //Add button selector
+		var socialwrapper = $('.socialWrapper'); //Input field wrapper
+		var socialFieldsHTML = '<div class="inlineFiled social_parentDiv"><div class="d-flex justify-content-start"><div class="p-2"><label for="socialLinks">Social</label><select id="sname" name="sname"><option value="facebook">facebook</option><option value="twitter">Twitter</option><option value="snapChat">SnapChat</option><option value="youtube">Youtube</option></select></div><div class="p-2 text-right"><label for="name">Links</label><input type="text" value="https://www.facebook.com/sayem.sam"><a href="#" type="button" class="text-light mr-2"><i class="fa fa-eye" style="font-size:20px;"></i></a><a href="javascript:void(0);" class="text-light font-weight-bold removeSocial_button ml-2"> <i class="fa fa-trash-o" style="font-size:20px;"></i></a></div></div></div>'; //New input field html 
+		var x = 1; //Initial field counter is 1
+		
+		//Once add button is clicked
+		$(addSocialButton).click(function(){
+			//Check maximum number of input fields
+			if(x < maxField){ 
+				x++; //Increment field counter
+				$(socialwrapper).append(socialFieldsHTML); //Add field html
+			}
+		});
+		
+		//Once remove button is clicked
+		$(socialwrapper).on('click', '.removeSocial_button', function(e){
+			e.preventDefault();
+			$(this).closest('.social_parentDiv').remove(); //Remove field html
+			x--; //Decrement field counter
+		});
+	});
+	</script>
+	<!-- SOCIAL LINKS JQUERY INLINE  -->
+
+	<!-- PROFESSIONAL LINKS JQUERY INLINE  -->
+	<script type="text/javascript">
+	$(document).ready(function(){
+			var maxField = 10; 
+			var addProfButton = $('#AddMoreProf');
+			var profwrap = $('.profwrapper'); 
+			var profFieldHTML = '<hr><div class="mt-2 mb-2 profParentDiv"><label for="cmpDesignation">Responsibilty</label><input type="text" value="Full-stack Developer"><label for="cmpName">Company</label><input type="text" value="Techmelba International"><div><div class="d-flex justify-content-start"><div class="p-1"><label for="date">From</label><input type="date"></div><div class="p-1"><label for="date">To</label><input type="date"></div></div></div><label for="location">Location</label><textarea type="text" name="location"  cols="30" rows="3">House 417, Road 07, Baridhara DOHS, Dhaka</textarea><a href="javascript:void(0);" class="removeProfButton text-light font-weight-bold" style="font-size: 20px;"><i class="fa fa-trash-o"></i></a></div>';
+			var x = 1; 
+			$(addProfButton).click(function(){
+				if(x < maxField){ 
+					x++; 
+					$(profwrap).append(profFieldHTML);
+				}
+			});
+			$(profwrap).on('click', '.removeProfButton', function(e){
+				e.preventDefault();
+				$(this).closest('.profParentDiv').remove(); 
+				x--; 
+			});
+		});
+	</script>
+
+	<!-- Skills LINKS JQUERY INLINE  -->
+	<script type="text/javascript">
+		$(document).ready(function(){
+			var maxField = 10; 
+			var addSkillButton = $('#skillAddMore');
+			var sw = $('.skillswrapper'); 
+			var skillFieldHTML = '<div class="skills"><label for="skName">Skills</label><input type="text" value="Web Development"><a href="javascript:void(0);" class="text-light font-weight-bold removeSkillDiv"> <i class="fa fa-trash-o" style="font-size:20px;"></i></a></div>';
+			var x = 1; 
+			$(addSkillButton).click(function(){
+				if(x < maxField){ 
+					x++; 
+					$(sw).append(skillFieldHTML);
+				}
+			});
+			$(sw).on('click', '.removeSkillDiv', function(e){
+				e.preventDefault();
+				$(this).closest('.skills').remove(); 
+				x--; 
+			});
+		});
+		</script>
 	
 </body>
 </html>
