changes updated in edit

--- a/templates/User/editProfile.html
+++ b/templates/User/editProfile.html
@@ -184,33 +184,27 @@
 		<div class="container-menu-desktop trans-03">
 			<div class="wrap-menu-desktop">
 				<nav class="limiter-menu-desktop p-l-45">
-					
-					<!-- Logo desktop -->		
-					<a href="#" class="logo">
-						<img src="{% static 'images/icons/pre-black.png'%}" alt="IMG-LOGO">
-					</a>
-
-					<!-- Menu desktop -->
-					<div class="menu-desktop">
-						<ul class="main-menu">
-							<li class="active-menu">
-								<a href="#">Log Out</a>
-							</li>
-						</ul>
-					</div>		
+					<div class="logo-mobile">
+						<a href="/"><img src="{% static 'images/icons/pre-black.png'%}" alt="IMG-LOGO"></a>
+					</div>
+					<div class="btn-show-menu-mobile hamburger hamburger--squeeze ">
+						<span class="test mr-4">
+							<a href="#" class="text-dark">Log Out</a>
+						</span>
+					</div>
 				</nav>
 			</div>	
 		</div>
 
 		<!-- Header Mobile -->
-		<div class="wrap-header-mobile text-center" style="background-color: black; color: white;">
+		<div class="wrap-header-mobile text-center">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
-				<a href="/"><img src="{% static 'images/icons/prw.png'%}" alt="IMG-LOGO"></a>
+				<a href="/"><img src="{% static 'images/icons/pre-black.png'%}" alt="IMG-LOGO"></a>
 			</div>
 			<div class="btn-show-menu-mobile hamburger hamburger--squeeze ">
 				<span class="test">
-                    <a href="#" class="text-light">SHOP</a>
+                    <a href="#" class="text-dark">Log Out</a>
 				</span>
 			</div>
 		</div>
